--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
+apply from: '../sdktools.gradle'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion project.getSDKIfPossible(25)
+    buildToolsVersion project.getHighestAvailableTools("26.0.0")
     defaultConfig {
-        applicationId "com.example.teamengineer.myengineer"
-        minSdkVersion 15
-        targetSdkVersion 25
+        applicationId "pl.pollub.android.shoppinglist"
+        minSdkVersion 19
+        targetSdkVersion project.getSDKIfPossible(25)
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -17,15 +18,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:' + project.getSDKIfPossible(25) + '.+'
+    compile 'com.android.support.constraint:constraint-layout:+'
+    compile 'com.android.support:design:' + project.getSDKIfPossible(25) + '.+'
+    testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.1'
-    compile 'com.android.support:design:25.3.1'
-    testCompile 'junit:junit:4.12'
 }
