--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,18 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    // Android specific libs
     compile 'com.android.support:appcompat-v7:' + project.getSDKIfPossible(25) + '.+'
     compile 'com.android.support.constraint:constraint-layout:+'
     compile 'com.android.support:design:' + project.getSDKIfPossible(25) + '.+'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        //exclude group: 'javax.annotation', module: 'javax.annotation-api'
+    })
+    // third party libs
     compile "org.projectlombok:lombok:1.16.16"
     annotationProcessor "org.projectlombok:lombok:1.16.+"
+    compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+    //provided 'javax.annotation:javax.annotation-api:1.3.+'
     testCompile 'junit:junit:4.12'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
 }
