--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,23 @@
     package="pl.pollub.android.shoppinglist">
 
     <application
-        android:name=".ShoppingListApp"
+        android:name=".Main"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainScreen" />
-        <activity android:name=".LogInto" />
-        <activity android:name=".Register" />
-        <activity android:name=".ListsList" />
-        <activity android:name=".ListItems" />
-        <activity android:name=".FriendsList" />
-        <activity android:name=".AddFriend" />
-        <activity android:name=".Add_Product" />
-        <activity android:name=".Settings" />
-        <activity android:name=".Splash">
+        <activity android:name=".activity.MainScreen" />
+        <activity android:name=".activity.LogInto" />
+        <activity android:name=".activity.Register" />
+        <activity android:name=".activity.ListsList" />
+        <activity android:name=".activity.ListItems" />
+        <activity android:name=".activity.BuddiesActivity" />
+        <activity android:name=".activity.AddFriend" />
+        <activity android:name=".activity.Add_Product" />
+        <activity android:name=".activity.Settings" />
+        <activity android:name=".activity.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Templates" />
-        <activity android:name=".TemplatesList"></activity>
+        <activity android:name=".activity.TemplatesList"></activity>
     </application>
 
 </manifest>
