--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,19 +2,20 @@ apply plugin: 'com.android.application'
 apply from: '../sdktools.gradle'
 
 android {
-    compileSdkVersion project.getSDKIfPossible(26)
-    buildToolsVersion project.getHighestAvailableTools("26.0.0")
+    compileSdkVersion 26
+    buildToolsVersion project.latestToolsForMinVer("26.0.0")
     defaultConfig {
         applicationId "pl.pollub.android.shoppinglist"
         minSdkVersion 19
-        targetSdkVersion project.getSDKIfPossible(26)
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -31,19 +32,20 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     // Android specific libs
-    compile 'com.android.support:appcompat-v7:' + project.getSDKIfPossible(26) + '.+'
-    compile 'com.android.support.constraint:constraint-layout:+'
-    compile 'com.android.support:design:' + project.getSDKIfPossible(26) + '.+'
-    compile 'android.arch.persistence.room:runtime:1.0.0-beta1'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-beta1'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
+    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support.constraint:constraint-layout:1.+'
+    compile 'com.android.support:design:26.+'
+    compile 'android.arch.persistence.room:runtime:1.+'
+    compile 'android.arch.lifecycle:extensions:1.+'
+    compile 'android.arch.paging:runtime:1.+'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.+'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.+'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:3.+', {
         exclude group: 'com.android.support', module: 'support-annotations'
-        //exclude group: 'javax.annotation', module: 'javax.annotation-api'
     })
     // third party libs
-    compile 'org.projectlombok:lombok:1.16.+'
-    annotationProcessor 'org.projectlombok:lombok:1.16.+'
-    compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
-    //provided 'javax.annotation:javax.annotation-api:1.3.+'
+    compile 'org.projectlombok:lombok:1.+'
+    annotationProcessor 'org.projectlombok:lombok:1.+'
+    compile 'com.jakewharton.threetenabp:threetenabp:1.+'
     testCompile 'junit:junit:4.12'
 }
