--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,10 @@
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.RegistrationActivity" />
         <activity android:name=".activity.ShoppingListDetailsActivity" />
-        <activity android:name=".activity.BuddyManagerActivity" />
         <activity android:name=".activity.ShoppingListsActivity" />
-        <activity android:name=".activity.AddShoppingList"/>
+        <activity android:name=".activity.BuddyManagerActivity" />
+        <activity android:name=".activity.CustomProductAppenderActivity" />
+        <activity android:name=".activity.CustomProductsListActivity" />
         <activity android:name=".activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +34,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     </application>
 
 </manifest>
