--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity android:name=".activity.ShoppingListDetailsActivity" />
         <activity android:name=".activity.BuddyManagerActivity" />
         <activity android:name=".activity.ShoppingListsActivity" />
+        <activity android:name=".activity.CustomProductAppenderActivity"/>
+        <activity android:name=".activity.CustomProductsListActivity"/>
         <activity android:name=".activity.AddShoppingList" />
         <activity android:name=".activity.SplashScreenActivity">
             <intent-filter>
