--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,8 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -17,10 +15,8 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
     }
 }
 
