--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:value="@string/parse_app_id" />
 
         <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.BuddiesActivity"/>
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.RegistrationActivity" />
         <activity android:name=".activity.ShoppingListDetailsActivity" />
@@ -32,6 +33,8 @@
         <activity android:name=".activity.CustomProductAppenderActivity"/>
         <activity android:name=".activity.CustomProductsListActivity"/>
         <activity android:name=".activity.AddShoppingList" />
+        <activity android:name=".activity.TemplatesActivity"/>
+        <activity android:name=".activity.SettingsActivity"/>
         <activity android:name=".activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
