--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
         exclude group: "com.android.support", module: "support-annotations"
     })
     testImplementation "junit:junit:4.12"
+    //custom library
+    compile 'io.github.yavski:fab-speed-dial:1.0.6'
+    compile 'com.github.imangazalievm:circlemenu:1.1.1'
 }
