--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:value="@string/parse_app_id" />
 
         <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.BuddiesActivity"/>
+        <activity android:name=".activity.FriendsActivity"/>
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.RegistrationActivity" />
         <activity android:name=".activity.ShoppingListDetailsActivity" />
