--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion project.latestToolsForMinVer("26.0.0")
     defaultConfig {
         applicationId "pl.pollub.shoppinglist"
-        minSdkVersion 19
+        minSdkVersion rootProject.minSdkVersion
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -32,12 +32,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // Google's libs
-    //noinspection GradleCompatible
-    implementation "com.android.support:appcompat-v7:26.1.+"
+    implementation "com.android.support:appcompat-v7:${rootProject.supportLibraryVersion}"
+    implementation "com.android.support:design:${rootProject.supportLibraryVersion}"
+    implementation "com.android.support:support-v4:${rootProject.supportLibraryVersion}"
+    implementation "com.android.support:recyclerview-v7:${rootProject.supportLibraryVersion}"
+    implementation "com.android.support:cardview-v7:${rootProject.supportLibraryVersion}"
     implementation "com.android.support.constraint:constraint-layout:1.+"
-    implementation "com.android.support:design:26.1.+"
-    implementation 'com.android.support:support-v4:26.1.+'
-    implementation 'com.android.support:recyclerview-v7:26.1.+'
     //implementation "android.arch.persistence.room:runtime:1.+"
     implementation "android.arch.lifecycle:extensions:1.+"
     implementation "android.arch.paging:runtime:1.+"
@@ -59,5 +59,5 @@ dependencies {
         exclude group: "com.android.support", module: "support-annotations"
     })
     testImplementation "junit:junit:4.12"
-    compile 'io.github.yavski:fab-speed-dial:1.0.6'
+    implementation "io.github.yavski:fab-speed-dial:1.0.6"
 }
