--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation "com.android.support:support-v4:${rootProject.supportLibraryVersion}"
     implementation "com.android.support:recyclerview-v7:${rootProject.supportLibraryVersion}"
     implementation "com.android.support:cardview-v7:${rootProject.supportLibraryVersion}"
+    implementation "com.android.support:gridlayout-v7:${rootProject.supportLibraryVersion}"
     implementation "com.android.support.constraint:constraint-layout:1.+"
     //implementation "android.arch.persistence.room:runtime:1.+"
     implementation "android.arch.lifecycle:extensions:1.+"
@@ -51,6 +52,7 @@ dependencies {
     implementation "com.satsuware.lib:usefulviews:2.+"
     // annotation processors
     //annotationProcessor "android.arch.persistence.room:compiler:1.+"
+    implementation 'com.android.support:support-v4:26.1.0'
     annotationProcessor "android.arch.lifecycle:compiler:1.+"
     annotationProcessor "org.projectlombok:lombok:1.+"
 
@@ -59,5 +61,5 @@ dependencies {
         exclude group: "com.android.support", module: "support-annotations"
     })
     testImplementation "junit:junit:4.12"
-    implementation "io.github.yavski:fab-speed-dial:1.0.6"
+    implementation "io.github.yavski:fab-speed-dial:1.0.+"
 }
