--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,5 @@ dependencies {
         exclude group: "com.android.support", module: "support-annotations"
     })
     testImplementation "junit:junit:4.12"
-    implementation "io.github.yavski:fab-speed-dial:1.0.+"
+    implementation "io.github.yavski:fab-speed-dial:1.0.6"
 }
