--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".activity.MainActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".activity.FriendsActivity" />
+        <activity android:name=".activity.MessagesActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".activity.ShoppingListDetailsActivity"/>
         <activity android:name=".activity.ShoppingListsActivity" />
         <activity android:name=".activity.CustomProductAppenderActivity" />
