Round buttons dialog. Changing colors on selecting items.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     testImplementation "junit:junit:4.12"
     // 1.0.7 is broken, don't upgrade: https://github.com/yavski/fab-speed-dial/issues/58
     implementation "io.github.yavski:fab-speed-dial:1.0.6"
+    implementation 'com.github.markushi:circlebutton:1.1'
 }
