added reminders to buy products on lists in form of notifications

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,5 +42,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".service.ScheduleService" />
+        <service android:name=".service.NotifyService" />
     </application>
 </manifest>
