Add 'about' page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,10 @@ dependencies {
     implementation "com.parse:parse-livequery-android:1.0.+"
     implementation "com.mobsandgeeks:android-saripaar:2.+"
     implementation "com.satsuware.lib:usefulviews:2.+"
+    // 1.0.7 is broken, don't upgrade: https://github.com/yavski/fab-speed-dial/issues/58
+    implementation "io.github.yavski:fab-speed-dial:1.0.6"
+    implementation "com.github.markushi:circlebutton:1.1"
+    implementation "com.github.medyo:android-about-page:1.2.+"
     // annotation processors
     //annotationProcessor "android.arch.persistence.room:compiler:1.+"
     annotationProcessor "android.arch.lifecycle:compiler:1.+"
@@ -60,7 +64,4 @@ dependencies {
         exclude group: "com.android.support", module: "support-annotations"
     })
     testImplementation "junit:junit:4.12"
-    // 1.0.7 is broken, don't upgrade: https://github.com/yavski/fab-speed-dial/issues/58
-    implementation "io.github.yavski:fab-speed-dial:1.0.6"
-    implementation 'com.github.markushi:circlebutton:1.1'
 }
